; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_bflt.c_search_old_relocation.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_bflt.c_search_old_relocation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reloc_struct_t = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.reloc_struct_t*, i64, i32)* @search_old_relocation to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @search_old_relocation(%struct.reloc_struct_t* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.reloc_struct_t*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.reloc_struct_t* %0, %struct.reloc_struct_t** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %25, %3
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %28

13:                                               ; preds = %9
  %14 = load i64, i64* %6, align 8
  %15 = load %struct.reloc_struct_t*, %struct.reloc_struct_t** %5, align 8
  %16 = load i32, i32* %8, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.reloc_struct_t, %struct.reloc_struct_t* %15, i64 %17
  %19 = getelementptr inbounds %struct.reloc_struct_t, %struct.reloc_struct_t* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %14, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %13
  %23 = load i32, i32* %8, align 4
  store i32 %23, i32* %4, align 4
  br label %29

24:                                               ; preds = %13
  br label %25

25:                                               ; preds = %24
  %26 = load i32, i32* %8, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %8, align 4
  br label %9

28:                                               ; preds = %9
  store i32 -1, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %22
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
